[package]
name = "nex"
version = "0.1.0"
authors = ["aryansrao"]
description = "nex — terminal session recorder that saves sessions into portable .nex ZIP files; supports replay, CSV/JSON export, and simple collaborative sharing."
readme = "README.md"
repository = "https://github.com/aryansrao/nex"
homepage = "https://github.com/aryansrao/nex"
keywords = ["terminal", "recorder", "pty", "cli", "session", "recording", "nex"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.7"
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.26"
base64 = "0.21"
csv = "1.2"
